==> apache/nuttx/arch/arm/src/kinetis/kinetis_rtc.c <==
#include <nuttx/config.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/timers/rtc.h>
#include <arch/board/board.h>
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdio.h>
#include <assert.h>
#include <debug.h>
#include <errno.h>
#include "arm_internal.h"
#include "kinetis_config.h"
#include "chip.h"
#include "hardware/kinetis_rtc.h"
#include "hardware/kinetis_sim.h"
#include "kinetis.h"
#include "kinetis_alarm.h"
#  define BOARD_RTC_CAP RTC_CR_SC8P | RTC_CR_SC4P

static int kinetis_rtc_interrupt(int irq, void *context, void *arg)
{
  uint16_t rtc_sr;

  /* if alarm */

  rtc_sr = getreg32(KINETIS_RTC_SR);
  if (rtc_sr & RTC_SR_TAF)
    {
      if (g_alarmcb != NULL)
        {
          /* Alarm callback */

          g_alarmcb();
          g_alarmcb = NULL;
        }
    }
  else
    {
      /* other interrupts are serious and should leave a turd
       *
       * RTC_SR_TIF   _TOF   _MOF
       */

      rtcwarn("unexp int src=0x%x, num=", rtc_sr);
    }

  /* Clear pending flags, disable alarm */

  putreg32(0, KINETIS_RTC_TAR); /* Unset alarm (resets flags) */
  putreg32(0, KINETIS_RTC_IER); /* Disable alarm interrupt */

  return 0;
}

int up_rtc_initialize(void)
{
  uint32_t regval;
  bool rtc_valid = false;

  /* Enable RTC module */

  regval = getreg32(KINETIS_SIM_SCGC6);
  regval |= SIM_SCGC6_RTC;
  putreg32(regval, KINETIS_SIM_SCGC6);

  regval = getreg32(KINETIS_RTC_SR);
  if (!(regval & RTC_SR_TIF))
    {
#ifdef KINETIS_RTC_GEN2
      /* Check if the one-time initialization of the RTC has already been
       * performed. We can determine this by checking if the magic number
       * has been written to the back-up date register DR0.
       */

      regval = getreg32(KINETIS_RTC_MCLR);
      if ((CONFIG_RTC_MAGICL == regval) &&
          (CONFIG_RTC_MAGICH == getreg32(KINETIS_RTC_MCHR)))
#endif
        {
          rtc_valid = true;
        }
    }

  if (rtc_valid)
    {
      rtcinfo("Do resume\n");

      /* RTC already set-up, just resume normal operation */

      rtc_dumpregs("Did resume");
    }
  else
    {
      rtcinfo("Do setup\n");
      rtc_reset();

#ifdef KINETIS_RTC_GEN2
      /* Configure the RTC to be initialized */

      putreg32(CONFIG_RTC_MAGICL, KINETIS_RTC_MCLR);
      putreg32(CONFIG_RTC_MAGICH, KINETIS_RTC_MCHR);
#endif

      /* Setup the update mode and supervisor access mode */

      putreg32((~(RTC_CR_UM | RTC_CR_SUP) & getreg32(KINETIS_RTC_CR)),
               KINETIS_RTC_CR);

      /* Disable counters (just in case) */

      putreg32(0, KINETIS_RTC_SR);

      /* Enable oscilator - must have Vbat else hard fault */

      putreg32((BOARD_RTC_CAP | RTC_CR_OSCE), KINETIS_RTC_CR);

      /* TODO - add capability to accurately tune RTC
       * This is a per individual board customization and requires
       * parameters to be configurable and stored in non-volatile eg flash.
       */

      /* TODO: delay some time (1024 cycles? would be 30ms) */
    }

  /* Disable interrupts */

  putreg32(0, KINETIS_RTC_IER);

  /* Reset flags requires writing the seconds register, the following line
   * avoids altering any stored time value.
   */

  putreg32(getreg32(KINETIS_RTC_TSR), KINETIS_RTC_TSR);

  /* Enable counters */

  putreg32(RTC_SR_TCE, KINETIS_RTC_SR);

  /* Mark RTC enabled */

  g_rtc_enabled = true;

  return OK;
}

int up_rtc_gettime(struct timespec *tp)
{
  irqstate_t flags;
  uint32_t seconds;
  uint32_t prescaler;
  uint32_t prescaler2;

  /* Get prescaler and seconds register. this is in a loop which ensures that
   * registers will be re-read if during the reads the prescaler has
   * wrapped-around.
   */

  flags = enter_critical_section();
  do
    {
      prescaler = getreg32(KINETIS_RTC_TPR);
      seconds = getreg32(KINETIS_RTC_TSR);
      prescaler2 = getreg32(KINETIS_RTC_TPR);
    }
  while (prescaler > prescaler2);

  leave_critical_section(flags);

  /* Build seconds + nanoseconds from seconds and prescaler register */

  tp->tv_sec = seconds;
  tp->tv_nsec = prescaler * (1000000000 / CONFIG_RTC_FREQUENCY);
  return OK;
}

int up_rtc_settime(const struct timespec *tp)
{
  irqstate_t flags;
  uint32_t seconds;
  uint32_t prescaler;

  seconds = tp->tv_sec;
  prescaler = tp->tv_nsec / (1000000000 / CONFIG_RTC_FREQUENCY);

  flags = enter_critical_section();

  putreg32(0, KINETIS_RTC_SR);  /* Disable counter */

  putreg32(prescaler, KINETIS_RTC_TPR); /* Always write prescaler first */
  putreg32(seconds, KINETIS_RTC_TSR);

  putreg32(RTC_SR_TCE, KINETIS_RTC_SR); /* Re-enable counter */

  leave_critical_section(flags);

  return OK;
}

int kinetis_rtc_setalarm(const struct timespec *tp, alarmcb_t callback)
{
  /* Is there already something waiting on the ALARM? */

  if (g_alarmcb == NULL)
    {
      /* No.. Save the callback function pointer */

      g_alarmcb = callback;

      /* ensure irq is attached */

      up_rtc_irq_attach();

      /* Enable and set RTC alarm */

      putreg32(tp->tv_sec, KINETIS_RTC_TAR);    /* Set alarm (also resets
                                                 * flags) */
      putreg32(RTC_IER_TAIE, KINETIS_RTC_IER);  /* Enable alarm interrupt */

      rtc_dumpregs("set alarmtime");

      return OK;
    }
  else
    {
      return -EBUSY;
    }
}

int kinetis_rtc_cancelalarm(void)
{
  if (g_alarmcb != NULL)
    {
      /* Cancel the global callback function */

      g_alarmcb = NULL;

      /* Unset the alarm */

      putreg32(0, KINETIS_RTC_IER);     /* Disable alarm interrupt */
      return OK;
    }
  else
    {
      return -ENODATA;
    }
}

int kinetis_rtc_rdalarm(struct timespec *tp)
{
  DEBUGASSERT(tp != NULL);

  tp->tv_sec = getreg32(KINETIS_RTC_TAR);
  tp->tv_nsec = 0;
  return OK;
}
